# catchtable-cli

./: .gitignore  AGENT_DX_EVALUATION.md  README.md  SKILL.md  pyproject.toml
catchtable_cli/: cli.py  client.py  config.py  models.py  schema.py  validate.py
catchtable_cli/commands/: search.py  shop.py
