[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "catchtable-cli"
version = "0.1.0"
description = "캐치테이블 비공식 CLI — AI 에이전트 친화적 설계 (Agent DX)"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "curl_cffi>=0.13",
    "httpx>=0.27",
    "pydantic>=2",
    "pydantic-settings>=2",
]

[project.scripts]
ct = "catchtable_cli.cli:app"
